adjustments to code and tests

--- a/src/applications/check-in/locales/en/translation.json
+++ b/src/applications/check-in/locales/en/translation.json
@@ -452,5 +452,7 @@
   "claims-for-past-va-appointments": "Claims for past VA appointments that happened before today",
   "claims-for-community-care-appointments": "Claims for community care appointments",
   "claims-for-other-expenses": "Claims for other expenses, like lodging, meals, or tolls",
-  "learn-how-to-file-other-types-of-claims": "Learn how to file other types of claims"
+  "learn-how-to-file-other-types-of-claims": "Learn how to file other types of claims",
+  "review-your-information-now-to-complete-pre-check-in": "Review your information now to complete pre-check-in",
+  "your-appointments-for-pre-check-in": "Your appointments for pre-check-in"
 }
