--- a/src/applications/check-in/locales/es/translation.json
+++ b/src/applications/check-in/locales/es/translation.json
@@ -324,13 +324,13 @@
   "we-cant-match-your-information": "No encontramos información en nuestros archivos que corresponda a su información",
   "we-couldnt-check-you-in": "No pudimos completar el registro",
   "we-couldnt-file-your-claim": "No pudimos tramitar su reclamación",
-  "we-encourage-you-to-file-travel-reimbursement-now": "Le haremos 3 preguntas adicionales que pueden ayudarlo a presentar su reclamación más rápido. Le animamos a que intente presentar su reclamación ahora, incluso si no está seguro de que es elegible.",
   "we-make-every-effort-to-keep-your-personal-information-private-and-secure": "Nos esforzamos al máximo para mantener la privacidad y la seguridad de su información personal.",
   "we-may--only-pay-return-for-unscheduled": "Puede que solo paguemos el millaje de vuelta para las citas no programadas, como las visitas sin cita previa y los análisis",
   "we-need-some-information-to-verify-your-identity-so-we-can-check-you-in": "Necesitamos cierta información para verificar su identidad y poder completar el registro.",
   "we-need-to-verify-your-identity-so-you-can-start-pre-check-in": "Necesitamos verificar su identidad para que usted pueda iniciar el registro previo a la llegada.",
   "we-need-your-last-name-and-birth": "Primero, necesitamos su apellido y fecha de nacimiento para asegurarnos de que se trata de usted.",
   "we-pay-round-trip-mileage-for-scheduled": "Pagamos el millaje de ida y vuelta para sus citas programadas",
+  "well-ask-additional-questions": "Le haremos 3 preguntas adicionales que pueden ayudarlo a presentar su reclamación más rápido.",
   "well-come-get-you-from-the-waiting-room": "Vendremos a buscarle a la sala de espera cuando sea la hora de empezar su cita. Si espera más de 15 minutos, avise a un miembro del personal.",
   "well-get-you-from-waiting-room-when-time-for-your-appointment": "Vendremos a buscarlo a la sala de espera cuando llegue el momento de su cita.",
   "well-send-you-a-text-to-let-you-know": "Le enviaremos un mensaje de texto para informarle sobre el estado de su reclamación.",
@@ -365,7 +365,6 @@
   "will-va-protect-my-personal-health-information": "¿VA protegerá mi información personal de salud?",
   "with": "con",
   "work-phone": "Teléfono del trabajo",
-  "would-you-like-to-file-a-travel-reimbursement-claim": "¿Quiere presentar una reclamación de reembolso de viaje?",
   "year": "Año",
   "yes": "Sí",
   "you-already-filed-a-claim": "Usted ya presentó una reclamación de pago por viaje",
