--- a/src/applications/check-in/locales/tl/translation.json
+++ b/src/applications/check-in/locales/tl/translation.json
@@ -351,13 +351,13 @@
   "we-couldnt-check-you-in": "Hindi ka namin mai-check in",
   "we-couldnt-complete-pre-check-in": "Hindi namin makumpleto ang pre-check-in.",
   "we-couldnt-file-your-claim": "Ngunit hindi namin maaaring i-file ang iyong claim",
-  "we-encourage-you-to-file-travel-reimbursement-now": "Magtatanong kami sa iyo ng 3 karagdagang tanong na makakatulong sa iyong mag-file ng iyong claim nang mas mabilis. Hinihikayat ka namin na subukan nang mag-file ng iyong claim ngayon, kahit hindi ka sigurado kung ikaw ay eligible.",
   "we-make-every-effort-to-keep-your-personal-information-private-and-secure": "Ginagawa namin ang lahat ng pagsisikap para mapanatiling pribado at ligtas ang iyong personal na impormasyon.",
   "we-may--only-pay-return-for-unscheduled": "Maaari lamang kaming magbayad ng return mileage para sa mga hindi naka-iskedyul na appointment tulad ng walk-ins at labs",
   "we-need-some-information-to-verify-your-identity-so-we-can-check-you-in": "Kailangan namin ng ilang impormasyon para ma-verify ang iyong identity para mai-check in ka namin ",
   "we-need-to-verify-your-identity-so-you-can-start-pre-check-in": "Kailangan naming i-verify ang iyong identity para masimulan ang pre-check-in.",
   "we-need-your-last-name-and-birth": "Una, kailangan namin ang iyong apelyido at petsa ng kapanganakan upang masigurong ikaw ito.",
   "we-pay-round-trip-mileage-for-scheduled": "Nagbabayad kami ng round-trip mileage para sa iyong mga naka-schedule na appointment",
+  "well-ask-additional-questions": "Magtatanong kami sa iyo ng 3 karagdagang tanong na makakatulong sa iyong mag-file ng iyong claim nang mas mabilis.",
   "well-come-get-you-from-the": "Susunduin ka namin sa ",
   "well-come-get-you-from-the-waiting-room": "Susunduin ka namin sa waiting room kapag oras na para magsimula ang iyong appointment. Kung naghintay ka ng mahigit 15 minuto, ipaalam sa miyembro ng staff.",
   "well-get-you-from-waiting-room-when-time-for-your-appointment": "Susunduin ka namin sa waiting room kapag oras na para magsimula ang iyong appointment.",
@@ -394,7 +394,6 @@
   "will-va-protect-my-personal-health-information": "Poprotektahan ba ng VA ang aking personal na impormasyong pangkalusugan?",
   "with": "kay",
   "work-phone": "Telepono sa trabaho",
-  "would-you-like-to-file-a-travel-reimbursement-claim": "Gusto mo bang i-file ang travel reimbursement claim?",
   "year": "Taon",
   "yes": "Oo",
   "you-already-filed-a-claim": "Nag-file ka na ng travel pay claim",
