EZR: Next of Kin without specs

--- a/src/applications/ezr/locales/en/content.json
+++ b/src/applications/ezr/locales/en/content.json
@@ -85,6 +85,22 @@
   "military-service-validation-toxic-exposure-format": "Enter a date that includes a month and year",
   "military-service-validation-gulf-war-range": "Service end date must be after the service start date",
   "military-service-validation-exposure-range": "Exposure end date must be after the exposure start date",
+  "next-of-kin-phone": "Phone number",
+  "next-of-kin-first-name": "Next of kin\u2019s first name",
+  "next-of-kin-middle-name": "Next of kin\u2019s middle name",
+  "next-of-kin-last-name": "Next of kin\u2019s last name",
+  "next-of-kin-relationship": "What is the next of kin\u2019s relationship to you?",
+  "next-of-kin-relationship-error-message": "Please select the relationship",
+  "next-of-kin-title": "Next of kin information",
+  "next-of-kin-description": "These are the people we\u2019ll ask to represent your wishes for care, medical documentation, and benefits if needed. And we may also contact this person if we can\u2019t get in contact with you. You can add up to 2 people as your next of kin. The first person you add will be your primary next of kin. We\u2019ll always contact this person first.",
+  "next-of-kin-address-label": "Do you want to share your next of kin\u2019s address?",
+  "next-of-kin-address-title": "Next of kin\u2019s home address",
+  "next-of-kin-add-contacts-label": "Do you want to add someone as your next of kin?",
+  "next-of-kin-summary-title": "Review your next of kin",
+  "next-of-kin-delete-title": "Delete this next of kin?",
+  "next-of-kin-delete-yes": "Yes, delete this next of kin",
+  "next-of-kin-delete-description": "This will delete %s and all the information from your list of next of kins.",
+  "next-of-kin-delete-description-default": "This will delete this contact and all the information from your list of next of kins.",
   "household-dependent-attended-school-label": "If your dependent is between 18 and 23 years old, were they enrolled as a full-time or part-time student in %s?",
   "household-dependent-became-label": "When did they become your dependent?",
   "household-dependent-cancel-button-text": "Cancel %s this dependent",
