Update Tagalog transaltion

--- a/src/applications/check-in/locales/tl/translation.json
+++ b/src/applications/check-in/locales/tl/translation.json
@@ -186,7 +186,7 @@
   "loading-your-appointment-information": "Nilo-load ang iyong impormasyon sa appointment",
   "loading-your-appointments-for-today": "Inilo-load ang iyong mga appointment sa araw na ito",
   "loading-your-check-in-experience": "Inilo-load ang iyong karanasan sa pag-check in",
-  "loading-your-upcoming-appointment-information": "Nilo-load ang iyong impormasyon sa paparating na appointment",
+  "loading-your-upcoming-appointment-information": "Nilo-load ang iyong impormasyon sa nalalapit na appointment",
   "location": "Lokasyon",
   "login": "mag-login",
   "mailing-address": "Address na pangkoreo",
