Made a small content fix

--- a/src/applications/ezr/locales/en/content.json
+++ b/src/applications/ezr/locales/en/content.json
@@ -63,7 +63,7 @@
   "military-service-post-sept11-title": "Service post-9/11",
   "military-service-post-sept11-description": "Did you serve in any of these Gulf War locations on or after September 11, 2001?",
   "military-service-post-sept11-dates-title": "Post-9/11 service dates",
-  "military-service-post-sept11-dates-description": "Enter any date range you served in a Gulf War location on or after September 11, 2001. You don\\u2019t need to have exact dates.",
+  "military-service-post-sept11-dates-description": "Enter any date range you served in a Gulf War location on or after September 11, 2001. You don\u2019t need to have exact dates.",
   "military-service-radiation-exposure-title-2": "Cleanup or response efforts",
   "military-service-radiation-exposure-description": "Did you take part in any of these clean up or response efforts while serving in any of these locations?",
   "military-service-supporting-documents-title": "Upload supporting documents",
