Fix federal law declaration name

--- a/src/applications/caregivers/locales/en/content.json
+++ b/src/applications/caregivers/locales/en/content.json
@@ -17,7 +17,7 @@
   "caregiver-address-description--vet-home": "This is the Veteran\u2019s home address:",
   "caregiver-address-same-as-vet-label": "Use the same address as the Veteran",
   "caregiver-address-street-hint": "Enter the address where the caregiver lives. This address can\u2019t be a PO Box.",
-  "certification-signature-note": "According to federal law (18.U.S.C. 1001), there are criminal penalties, including a fine and/or imprisonment for up to 5 years, for withholding information or providing incorrect information. ",
+  "certification-signature-note": "According to federal law (18 U.S.C. 1001), there are criminal penalties, including a fine and/or imprisonment for up to 5 years, for withholding information or providing incorrect information. ",
   "certification-statement--caregiver-1": "I certify that I am at least 18 years of age.",
   "certification-statement--caregiver-2": "I certify that either: (1) I am a member of the Veteran\u2019s family (including a parent, spouse, a son or daughter, a step-family member, or an extended family member) OR (2) I am not a member of the Veteran\u2019s family, and I reside with the Veteran full-time or will do so upon designation as the Veteran\u2019s %s Family Caregiver.",
   "certification-statement--caregiver-3": "I attest that my application and/or participation in PCAFC is as the Veteran\u2019s Family Caregiver. I acknowledge that my eligibility for any payment and/or other benefit that results is contingent on the Veteran\u2019s eligibility and participation and as such the Veteran is involved in my payment related activities.",
