--- a/src/applications/caregivers/locales/en/content.json
+++ b/src/applications/caregivers/locales/en/content.json
@@ -17,16 +17,15 @@
   "caregiver-address-description--vet-home": "This is the Veteran\u2019s home address:",
   "caregiver-address-same-as-vet-label": "Use the same address as the Veteran",
   "caregiver-address-street-hint": "Enter the address where the caregiver lives. This address can\u2019t be a PO Box.",
-  "certification-signature-note": "According to federal law, there are criminal penalties, including a fine and/or imprisonment for up to 5 years, for withholding information or providing incorrect information. (See 18 U.S.C. 1001)",
+  "certification-signature-note": "According to federal law (18 U.S.C. 1001), there are criminal penalties, including a fine and/or imprisonment for up to 5 years, for withholding information or providing incorrect information. ",
   "certification-statement--caregiver-1": "I certify that I am at least 18 years of age.",
   "certification-statement--caregiver-2": "I certify that either: (1) I am a member of the Veteran\u2019s family (including a parent, spouse, a son or daughter, a step-family member, or an extended family member) OR (2) I am not a member of the Veteran\u2019s family, and I reside with the Veteran full-time or will do so upon designation as the Veteran\u2019s %s Family Caregiver.",
-  "certification-statement--caregiver-3": "I attest that my application and/or participation in PCAFC is as the Veteran\u2019s Family Caregiver. I acknowledge my eligibility for any payment and/or other benefit that results is contingent on the Veteran\u2019s eligibility and participation and as such the Veteran is involved in my payment related activities.",
+  "certification-statement--caregiver-3": "I attest that my application and/or participation in PCAFC is as the Veteran\u2019s Family Caregiver. I acknowledge that my eligibility for any payment and/or other benefit that results is contingent on the Veteran\u2019s eligibility and participation and as such the Veteran is involved in my payment related activities.",
   "certification-statement--caregiver-4": "I agree to perform personal care services as the %s Family Caregiver for the Veteran named on this application.",
   "certification-statement--caregiver-5": "I understand that the Veteran or the Veteran\u2019s surrogate may request my discharge from the Program of Comprehensive Assistance for Family Caregivers (PCAFC) at any time and that my designation as a %s Family Caregiver may be revoked or I may be discharged from PCAFC by the Secretary of Veterans Affairs (or designee) as set forth in 38 CFR 71.45.",
   "certification-statement--caregiver-6": "I understand that participation in the PCAFC does not create an employment relationship between me and the Department of Veterans Affairs.",
-  "certification-statement--rep-1": "Signed by the Veteran\u2019s legal representative on behalf of the Veteran.",
-  "certification-statement--rep-2": "I certify that I give consent to the individual(s) named in this application to perform personal care services for me (or if the Veteran\u2019s Representative, the Veteran) upon being approved as a Primary and/or Secondary Family Caregiver(s) in the Program of Comprehensive Assistance for Family Caregivers.",
-  "certification-statement--vet": "I certify that the individual(s) named in this application are involved in my care and I consent to sharing information necessary to their involvement in my health care, payment related to such health care or as needed for notification purposes.",
+  "certification-statement--rep": "As the legal representative of %s, I certify that I give consent to the individual(s) named in this application to perform personal care services for me (or if the Veteran\u2019s Representative, the Veteran) upon being approved as a Primary and/or Secondary Family Caregiver(s) in the Program of Comprehensive Assistance for Family Caregivers.",
+  "certification-statement--vet": "I certify that the individual(s) named in this application are involved in my care, and I consent to sharing information necessary to their involvement in my health care, payment related to such health care or as needed for notification purposes.",
   "confirmation--alert-heading": "Thank you for completing your application",
   "confirmation--alert-text": "Once we\u2019ve successfully received your application, we\u2019ll contact you to tell you what happens next in the application process.",
   "confirmation--info-heading": "Your application information",
@@ -117,7 +116,7 @@
   "sign-as-rep-yes-text": "I\u2019m a representative with legal authority signing on behalf of the Veteran",
   "sign-as-rep-document-description": "We can only accept a document that proves you have legal authority to make decisions for the Veteran. Or we\u2019ll accept a document that proves you have authority to fill out or sign applications on behalf of the Veteran.",
   "statement-of-truth--title": "%s statement of truth",
-  "statement-of-truth--checkbox-label": "I certify the information above is correct and true to the best of my knowledge and belief.",
+  "statement-of-truth--checkbox-label": "I certify that the information above is correct and true to the best of my knowledge and belief. I understand that this action constitutes my electronic signature and is legally binding.",
   "statement-of-truth--input-label": "%s full name",
   "upload-doc-label": "Upload supporting document",
   "vet-address-description": "Any updates the Veteran makes here to their address will only apply to this application.",
