EZR: Allow 2 contacts each for EC and NoK

--- a/src/applications/ezr/locales/en/content.json
+++ b/src/applications/ezr/locales/en/content.json
@@ -40,7 +40,7 @@
   "emergency-contact-address-title": "Emergency contact\u2019s home address",
   "emergency-contact-add-contacts-label": "Do you want to add an emergency contact?",
   "emergency-contact-hint-text": "This is the person we\u2019ll contact in an emergency.",
-  "emergency-contact-summary-title": "Review your emergency contact",
+  "emergency-contact-summary-title": "Review your emergency contacts",
   "emergency-contact-delete-title": "Delete this emergency contact?",
   "emergency-contact-delete-yes": "Yes, delete this emergency contact",
   "emergency-contact-delete-description": "This will delete %s and all the information from your list of emergency contacts.",
@@ -116,7 +116,7 @@
   "next-of-kin-address-title": "Next of kin\u2019s home address",
   "next-of-kin-add-contacts-label": "Do you want to add someone as your next of kin?",
   "next-of-kin-hint-text": "Your next of kin is often your closest living relative \u0028like your spouse, child, parent, or sibling\u0029. But you can also list other family members or friends.",
-  "next-of-kin-summary-title": "Review your next of kin",
+  "next-of-kin-summary-title": "Review your next of kins",
   "next-of-kin-delete-title": "Delete this next of kin?",
   "next-of-kin-delete-yes": "Yes, delete this next of kin",
   "next-of-kin-delete-description": "This will delete %s and all the information from your list of next of kins.",
