--- a/src/applications/hca/locales/en/content.json
+++ b/src/applications/hca/locales/en/content.json
@@ -2,6 +2,11 @@
   "alert-download-message--generic": "Something went wrong on our end. We\u2019re not able to download a copy of your VA Form 10-10EZ (PDF).",
   "app-download--loading-text": "Preparing your application for download...",
   "app-loading-text": "Loading application...",
+  "array-builder--cancel-add-yes-label": "Yes, cancel adding",
+  "array-builder--cancel-add-no-label": "No, continue adding",
+  "array-builder--cancel-edit-yes-label": "Yes, cancel editing",
+  "array-builder--cancel-edit-no-label": "No, continue editing",
+  "array-builder--delete-no-label": "No, cancel",
   "benefits--reg-only-title": "Health care for your service-connected conditions",
   "benefits--reg-only-description": "You have the option to register for health care for your service-connected conditions only without enrolling in our full medical benefits package.",
   "benefits--reg-only-label": "What type of health care do you want to apply for?",
@@ -16,11 +21,17 @@
   "compensation-type-review--default-label": "No",
   "compensation-type-review--disclaimer": "If you need to edit this information, we\u2019ll take you back to this question in the form. We may need to ask you more questions.",
   "compensation-type-review--back-button-text": "Go back to edit compensation information",
-  "household-dependent-info-basic-title": "%s\u2019s basic information",
-  "household-dependent-info-addtl-title": "%s\u2019s additional information",
-  "household-dependent-info-support-title": "Financial support for %s",
-  "household-dependent-info-income-title": "%s\u2019s annual income from %d",
-  "household-dependent-info-education-title": "%s\u2019s education expenses",
+  "dependent-info--array-cancel-add-title": "Cancel adding this dependent",
+  "dependent-info--array-cancel-add-description": "If you cancel adding this %s, we won\u2019t save their information. You\u2019ll return to a screen where you can add or remove %s.",
+  "dependent-info--array-cancel-edit-description": "If you cancel editing this %s, we won\u2019t save their information. You\u2019ll return to a screen where you can add or remove %s.",
+  "dependent-info--array-noun-singular": "dependent",
+  "dependent-info--array-noun-plural": "dependents",
+  "dependent-info--summary-title": "Review your dependents",
+  "dependent-info--basic-title": "%s\u2019s basic information",
+  "dependent-info--addtl-title": "%s\u2019s additional information",
+  "dependent-info--support-title": "Financial support for %s",
+  "dependent-info--income-title": "%s\u2019s annual income from %d",
+  "dependent-info--education-title": "%s\u2019s education expenses",
   "enrollment-alert-title--active-duty": "Our records show that you\u2019re an active-duty service member",
   "enrollment-alert-title--deceased": "Our records show that this Veteran is deceased",
   "enrollment-alert-title--enrolled": "You\u2019re already enrolled in VA health care",
