Fix validation method

--- a/src/applications/hca/locales/en/content.json
+++ b/src/applications/hca/locales/en/content.json
@@ -30,7 +30,7 @@
   "dependent-info--basic-title": "%s\u2019s basic information",
   "dependent-info--addtl-title": "%s\u2019s additional information",
   "dependent-info--support-title": "Financial support for %s",
-  "dependent-info--income-title": "%s\u2019s annual income from %d",
+  "dependent-info--income-title": "%s\u2019s annual income from %s",
   "dependent-info--education-title": "%s\u2019s education expenses",
   "enrollment-alert-title--active-duty": "Our records show that you\u2019re an active-duty service member",
   "enrollment-alert-title--deceased": "Our records show that this Veteran is deceased",
