--- a/src/applications/ezr/locales/en/content.json
+++ b/src/applications/ezr/locales/en/content.json
@@ -39,18 +39,20 @@
   "emergency-contact-description": "The person you want us to contact in an emergency. You can add up to two emergency contacts.",
   "emergency-contact-address-title": "Emergency contact\u2019s home address",
   "emergency-contact-add-contacts-label": "Do you want to add an emergency contact?",
-  "emergency-contact-hint-text": "This is the person we\u2019ll contact in an emergency.",
+  "emergency-contact-add-another-contact-label": "Do you want to add another person as your emergency contact?",
+  "emergency-contact-hint-text": "You can add up to 2 emergency contacts. These are the people we\u2019ll contact in an emergency. Your primary emergency contact is the first person shown on this screen. We\u2019ll always contact this person first.",
   "emergency-contact-summary-title": "Review your emergency contacts",
-  "emergency-contact-delete-title": "Delete this emergency contact?",
-  "emergency-contact-delete-yes": "Yes, delete this emergency contact",
-  "emergency-contact-delete-description": "This will delete %s and all the information from your list of emergency contacts.",
-  "emergency-contact-delete-description-default": "This will delete this contact and all the information from your list of emergency contacts.",
+  "emergency-contact-delete-title": "Remove this emergency contact?",
+  "emergency-contact-delete-yes": "Yes, remove",
+  "emergency-contact-delete-no": "No, keep",
+  "emergency-contact-delete-description": "This will remove their information from this form. You\u2019ll return to a page where you can add an emergency contact.",
+  "emergency-contact-delete-description-default": "This will remove their information from this form. You\u2019ll return to a page where you can add an emergency contact.",
   "emergency-contact-cancel-add-description-text": "If you cancel, we won\u2019t add this person as your emergency contact. You\u2019ll return to a page where you can add a new emergency contact.",
-  "emergency-contact-cancel-edit-title-text": "Cancel editing your emergency contact?",
-  "emergency-contact-cancel-add-title-text": "Cancel adding your emergency contact?",
+  "emergency-contact-cancel-edit-title-text": "Cancel editing this emergency contact?",
+  "emergency-contact-cancel-add-title-text": "Cancel adding this emergency contact?",
   "emergency-contact-cancel-edit-description-text": "If you cancel, you\u2019ll lose any changes you made on this screen. You\u2019ll return to a page where you can review your emergency contact.",
   "emergency-contact-cancel-add-yes": "Yes, cancel adding",
-  "emergency-contact-cancel-add-no": "No, continue adding this",
+  "emergency-contact-cancel-add-no": "No, continue adding",
   "emergency-contact-cancel-edit-yes": "Yes, cancel editing",
   "emergency-contact-cancel-edit-no": "No, continue editing",
   "emergency-contact-military-checkbox": "They live on a United States military base outside of the U.S.",
@@ -112,19 +114,20 @@
   "next-of-kin-relationship": "What is the next of kin\u2019s relationship to you?",
   "next-of-kin-relationship-error-message": "Please select the relationship",
   "next-of-kin-title": "Next of kin information",
-  "next-of-kin-description": "These are the people we\u2019ll ask to represent your wishes for care, medical documentation, and benefits if needed. And we may also contact this person if we can\u2019t get in contact with you. You can add up to 2 people as your next of kin. The first person you add will be your primary next of kin. We\u2019ll always contact this person first.",
   "next-of-kin-address-title": "Next of kin\u2019s home address",
   "next-of-kin-add-contacts-label": "Do you want to add someone as your next of kin?",
-  "next-of-kin-hint-text": "Your next of kin is often your closest living relative \u0028like your spouse, child, parent, or sibling\u0029. But you can also list other family members or friends.",
+  "next-of-kin-add-another-contact-label": "Do you want to add another person as your next of kin?",
+  "next-of-kin-hint-text": "You can add up to 2 people as your next of kin. The first person you add will be your primary next of kin. We\u2019ll always contact this person first. Your next of kin is often your closest living relative (like your spouse, child, parent or sibling). But you can also list other family members or friends.",
   "next-of-kin-summary-title": "Review your next of kins",
-  "next-of-kin-delete-title": "Delete this next of kin?",
-  "next-of-kin-delete-yes": "Yes, delete this next of kin",
-  "next-of-kin-delete-description": "This will delete %s and all the information from your list of next of kins.",
+  "next-of-kin-delete-title": "Remove this next of kin?",
+  "next-of-kin-delete-yes": "Yes, remove",
+  "next-of-kin-delete-no": "No, keep",
+  "next-of-kin-delete-description": "This will remove their information from this form. You\u2019ll return to a page where you can add a next of kin.",
   "next-of-kin-delete-description-default": "This will delete this contact and all the information from your list of next of kins.",
   "household-dependent-attended-school-label": "If your dependent is between 18 and 23 years old, were they enrolled as a full-time or part-time student in %s?",
   "next-of-kin-cancel-add-description-text": "If you cancel, we won\u2019t add this person as your next of kin. You\u2019ll return to a page where you can add a new next of kin.",
-  "next-of-kin-cancel-edit-title-text": "Cancel editing your next of kin?",
-  "next-of-kin-cancel-add-title-text": "Cancel adding your next of kin?",
+  "next-of-kin-cancel-edit-title-text": "Cancel editing this next of kin?",
+  "next-of-kin-cancel-add-title-text": "Cancel adding this next of kin?",
   "next-of-kin-cancel-edit-description-text": "If you cancel, you\u2019ll lose any changes you made on this screen. You\u2019ll return to a page where you can review your next of kin.",
   "next-of-kin-cancel-add-yes": "Yes, cancel adding",
   "next-of-kin-cancel-add-no": "No, continue adding",
@@ -132,6 +135,7 @@
   "next-of-kin-cancel-edit-no": "No, continue editing",
   "next-of-kin-summary-yes-no-blank-review-question": "Do you want to add someone as your next of kin?",
   "next-of-kin-summary-add-button-text": "Add a next of kin",
+  "no": "No",
   "household-dependent-became-label": "When did they become your dependent?",
   "household-dependent-cancel-button-text": "Cancel %s this dependent",
   "household-dependent-cohabitated-label": "Did your dependent live with you in %s?",
@@ -279,5 +283,6 @@
   "vet-home-phone-label": "Home phone number",
   "vet-mailing-address-title": "Mailing address",
   "vet-mailing-address-description": "We\u2019ll send any important information about your application to this address.",
-  "vet-mobile-phone-label": "Mobile phone number"
+  "vet-mobile-phone-label": "Mobile phone number",
+  "yes": "Yes"
 }
