EZR: More contacts content updates

--- a/src/applications/ezr/locales/en/content.json
+++ b/src/applications/ezr/locales/en/content.json
@@ -116,6 +116,10 @@
   "next-of-kin-title": "Next of kin information",
   "next-of-kin-address-title": "Next of kin\u2019s home address",
   "next-of-kin-add-contacts-label": "Do you want to add someone as your next of kin?",
+  "next-of-kin-add-contacts-yes-label": "Yes, I want to add someone as my next of kin",
+  "next-of-kin-add-contacts-no-label": "No, I don\u2019t want to add anyone as my next of kin",
+  "next-of-kin-add-another-contact-yes-label": "Yes, I want to add another person as my next of kin",
+  "next-of-kin-add-another-contact-no-label": "No, I don\u2019t want to add another person as my next of kin",
   "next-of-kin-add-another-contact-label": "Do you want to add another person as your next of kin?",
   "next-of-kin-hint-text": "You can add up to 2 people as your next of kin. The first person you add will be your primary next of kin. We\u2019ll always contact this person first. Your next of kin is often your closest living relative (like your spouse, child, parent or sibling). But you can also list other family members or friends.",
   "next-of-kin-summary-title": "Review your next of kins",
