--- a/src/applications/hca/locales/en/content.json
+++ b/src/applications/hca/locales/en/content.json
@@ -150,6 +150,8 @@
   "service-info--attachments-type-label": "Document type",
   "service-info--exposure-date-title": "Dates of exposure",
   "service-info--exposure-date-description": "Enter any date range when you think you may have been exposed to other toxins or hazards. You don\u2019t need to have exact dates.",
+  "service-info--exposure-start-date-label": "Exposure start date",
+  "service-info--exposure-end-date-label": "Exposure end date",
   "service-info--exposures-title": "Other toxic exposures",
   "service-info--exposures-description": "You selected that you think you may have been exposed to other toxins or hazards.",
   "service-info--exposures-air-pollutants-label": "Air pollutants (like burn pits, sand, oil wells, or sulfur fires)",
