--- a/src/applications/ezr/locales/en/content.json
+++ b/src/applications/ezr/locales/en/content.json
@@ -163,6 +163,8 @@
   "household-dependent-modal-remove-button-text": "Yes, remove dependent",
   "household-dependent-name-prefix": "Dependent\u2019s",
   "household-dependent-received-support-label": "If your dependent didn\u2019t live with you in %s, did you provide any financial support?",
+  "household-dependent-received-support-yes-label": "Yes, I provided financial support",
+  "household-dependent-received-support-no-label": "No, I didn\u2019t provide any financial support",
   "household-dependent-relationship-label": "What is the dependent\u2019s relationship to you?",
   "household-dependent-report-question": "Do you have any dependents to report?",
   "household-dependent-report-question-addtl" : "Do you have another dependent to report?",
@@ -175,7 +177,7 @@
   "household-dependent-summary-title": "Your Dependents",
   "household-dependent-summary-list-title": "Review your dependents",
   "household-dependent-update-button-aria-label": "Update your dependents",
-  "household-dependent-max-dependents-warning": "Yes",
+  "household-dependent-max-dependents-warning": "You added the maximum number of dependents you can include on this form. You can review and edit your dependent information. You can continue, edit, or delete your dependent information.",
   "household-expenses-title": "Deductible expenses from %s",
   "household-expenses-description": "These deductible expenses will lower the amount of money we count as your income.",
   "household-expenses-education-title": "College or vocational education expenses",
