--- a/src/applications/ezr/locales/en/content.json
+++ b/src/applications/ezr/locales/en/content.json
@@ -151,11 +151,11 @@
   "household-dependent-income-gross-label": "Enter your dependent\u2019s gross annual income from %s",
   "household-dependent-income-net-label": "Enter your dependent\u2019s net annual income from a farm, property, or business from %s",
   "household-dependent-income-other-label": "Enter your dependent\u2019s other annual income from %s",
-  "household-dependent-info-addtl-title": "%s\u2019s additional information",
+  "household-dependent-info-addtl-title": "Dependent\u2019s additional information",
   "household-dependent-info-basic-title": "%s\u2019s information",
-  "household-dependent-info-education-title": "%s\u2019s education expenses",
-  "household-dependent-info-income-title": "%s\u2019s annual income from %d",
-  "household-dependent-info-support-title": "Financial support for %s",
+  "household-dependent-info-education-title": "Dependent\u2019s education expenses",
+  "household-dependent-info-income-title": "Dependent\u2019s annual income from %d",
+  "household-dependent-info-support-title": "Your dependent\u2019s financial support",
   "household-dependent-modal-cancel-title": "Cancel %s this dependent?",
   "household-dependent-modal-cancel-description": "If you cancel %s this dependent, we won\u2019t save their information. You\u2019ll return to a screen where you can add or remove dependents.",
   "household-dependent-modal-remove-title": "Remove this dependent?",
@@ -163,14 +163,21 @@
   "household-dependent-modal-remove-button-text": "Yes, remove dependent",
   "household-dependent-name-prefix": "Dependent\u2019s",
   "household-dependent-received-support-label": "If your dependent didn\u2019t live with you in %s, did you provide any financial support?",
+  "household-dependent-received-support-yes-label": "Yes, I provided financial support",
+  "household-dependent-received-support-no-label": "No, I didn\u2019t provide any financial support",
   "household-dependent-relationship-label": "What is the dependent\u2019s relationship to you?",
   "household-dependent-report-question": "Do you have any dependents to report?",
   "household-dependent-report-question-addtl" : "Do you have another dependent to report?",
+  "household-dependent-report-yes": "Yes",
+  "household-dependent-report-no": "No",
+  "household-dependent-report-yes-addtl": "Yes, I want to add another dependent",
+  "household-dependent-report-no-addtl": "No, I don\u2019t want to add another dependent",
   "household-dependent-review-header-title": "Your Dependents", 
   "household-dependent-ssn-label": "Dependent\u2019s Social Security number",
-  "household-dependent-summary-title": "Dependents",
+  "household-dependent-summary-title": "Your Dependents",
   "household-dependent-summary-list-title": "Review your dependents",
   "household-dependent-update-button-aria-label": "Update your dependents",
+  "household-dependent-max-dependents-warning": "You added the maximum number of dependents you can include on this form. You can review and edit your dependent information. You can continue, edit, or delete your dependent information.",
   "household-expenses-title": "Deductible expenses from %s",
   "household-expenses-description": "These deductible expenses will lower the amount of money we count as your income.",
   "household-expenses-education-title": "College or vocational education expenses",
